--- a/views/commons/movie_details.ejs
+++ b/views/commons/movie_details.ejs
@@ -8,6 +8,64 @@
         <img class="rounded mt-5 mx-auto d-block" alt="Image not found" src="<%- movie.poster %>">
         <h4 class="mt-4 text-center"><%= movie.title  %></h4>
         <p class="mt-2 text-justify"><%= movie.plot  %></p>
+
+        <button class="btn btn-primary btn-block" type="button" data-toggle="collapse" data-target="#general_info" aria-expanded="false" aria-controls="general_info">
+            Details
+        </button>
+
+        <div class="collapse" id="general_info">
+            <table class="table table-bordered table-striped table-sm" >
+                <tr>
+                    <td scope="col">Relesed</th>
+                    <td scope="col"><%=movie.all_data.Released %></th>
+                </tr>
+                <tr>
+                    <td scope="col">Director</th>
+                    <td scope="col"><%=movie.all_data.Director %></th>
+                </tr>
+                <tr>
+                    <td scope="col">Actors</th>
+                    <td scope="col"><%=movie.all_data.Actors %></th>
+                </tr>
+                
+                <tr>
+                    <td scope="col">Awards</th>
+                    <td scope="col"><%=movie.all_data.Awards %></th>
+                </tr>
+
+                <tr>
+                    <td scope="col">Language</th>
+                    <td scope="col"><%=movie.all_data.Language %></th>
+                </tr> 
+
+                <tr>
+                    <td scope="col">Runtime</th>
+                    <td scope="col"><%=movie.all_data.Runtime %></th>
+                </tr> 
+
+                <tr>
+                    <td scope="col">Genre</th>
+                    <td scope="col"><%=movie.all_data.Genre %></th>
+                </tr> 
+
+            </table>
+        </div>
+
+        <button class="btn btn-primary btn-block mt-2" type="button" data-toggle="collapse" data-target="#ratings" aria-expanded="false" aria-controls="ratings">
+            Ratings
+        </button>
+
+        <div class="collapse" id="ratings">
+            <table class="table table-bordered table-striped table-sm" >
+
+                <% movie.all_data.Ratings.forEach((rating) => { %>
+                    <tr>
+                        <td scope="col"><%= rating.Source %></th>
+                        <td scope="col"><%= rating.Value %></th>
+                    </tr>
+                <% }); %>
+            </table>
+        </div>
         
     </div>
     
