--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -10,8 +10,12 @@
 
         <!-- log in - left side / top -->
         <div class="col-lg-10 col-12 mt-5">
-            <img class="rounded mt-5 mx-auto d-block" alt="img not found" src="https://imgs.xkcd.com/comics/fixing_problems.png">
+            <a href="https://xkcd.com/1739/">
+                <img class="rounded mt-5 mx-auto d-block" alt="img not found" src="https://imgs.xkcd.com/comics/fixing_problems.png">            
+            </a>
         </div>
+        
+         
         
         <!-- right margin -->
         <div class="col-lg-1 col-0"></div>
