--- a/views/commons/user_info.ejs
+++ b/views/commons/user_info.ejs
@@ -7,7 +7,7 @@
         <table class="table mt-4 table-bordered">
             <tbody>
                 <tr>                                
-                    <td colspan="2"><%= user.username %></td>
+                    <td colspan="2"><%= /*user.username*/ locals.current_profile.username %></td>
                 </tr> 
                 <tr>
                     <td>Member since:</td>
