--- a/views/commons/navbar.ejs
+++ b/views/commons/navbar.ejs
@@ -1,6 +1,6 @@
  <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
     
-    <a class="navbar-brand" href="/">As i've seen it</a>
+    <a class="navbar-brand" href="/">Fresh Tomatoes</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
