--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -4,18 +4,33 @@
 <%- include("../commons/navbar") -%>
 
 <div class="container">
+
     <div class="row">
         <!-- left margin -->
         <div class="col-lg-1 col-0"></div>
 
         <!-- log in - left side / top -->
         <div class="col-lg-10 col-12 mt-5">
+            <p class="text-center">Landing page is under construction!</p>
+        </div>
+                 
+        
+        <!-- right margin -->
+        <div class="col-lg-1 col-0"></div>
+    </div>
+
+
+    <div class="row">
+        <!-- left margin -->
+        <div class="col-lg-1 col-0"></div>
+
+        <!-- log in - left side / top -->
+        <div class="col-lg-10 col-12 mt-0">
             <a href="https://xkcd.com/1739/">
                 <img class="rounded mt-5 mx-auto d-block" alt="img not found" src="https://imgs.xkcd.com/comics/fixing_problems.png">            
             </a>
         </div>
-        
-         
+                 
         
         <!-- right margin -->
         <div class="col-lg-1 col-0"></div>
